# ciocheck

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.circleci/: config.yml
ciocheck/: cli.py
scripts/: release.sh
tests/: test_cli.py
